@@ -5,6 +5,7 @@ database structure we're incrementing number after first decimal (i.e 1.1, 1.2).
 
 Version 1.2.1
 - Fixed box width in admin panel
+- Added form "Author"
 
 Version 1.2
 - Added possibility to split the from into parts (attribute "page separator")
